--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,7 @@
       <div class="header-links">
         <a class="link" href="#about" data-scroll>About Me</a>
         <a class="link" href="#projects" data-scroll>Projects</a>
+        <a class="link" href="https://viniciotricolor.blogspot.com/p/blog-page.html" data-scroll>Fallow me</a>
       </div>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
