--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,11 +9,12 @@
         <a aria-label="My Twitter" target="_blank" href="#"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
         <a aria-label="My Google Plus" target="_blank" href="#"><i class="icon fa fa-google-plus" aria-hidden="true"></i></a>
         <a aria-label="My Github" target="_blank" href="#"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
+        <a aria-label="Follow me" target="_blank" href="https://viniciotricolor.blogspot.com/p/blog-page.html"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
       </div>
       <div class="header-links">
         <a class="link" href="#about" data-scroll>About Me</a>
         <a class="link" href="#projects" data-scroll>Projects</a>
-        <a class="link" href="https://viniciotricolor.blogspot.com/p/blog-page.html" target="_blank>Fallow me</a>
+        <a aria-label="Follow me" target="_blank" href="https://viniciotricolor.blogspot.com/p/blog-page.html"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>                                                                                 
       </div>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
