--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -8,7 +8,7 @@
   <div class="contents">
     <h3>yalp store</h3>
     <ul>
-      <li> </li>
+      <li>Projeto Tradução </li>
     </ul>
     <p>Yalp Store permite que você baixe aplicativos diretamente da Google Play Store como arquivos apk. Ele pode procurar por atualizações de aplicativos instalados e permite procurar outros aplicativos. O Yalp salva os downloads dos arquivos baixados para sua pasta de download padrão. Tradução voluntária para português brasileiro iniciada 22/07/2017</p>
     <a class="project-link" href="https://github.com/yeriomin/YalpStore">Check it out</a>
